# libplacebo-jni

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/docker/: Dockerfile-libplacebo-jni
.github/workflows/: ci_android.yml  ci_build_java_lib.yml  ci_linux.yml  ci_linux_old.yml  ci_macos.yml  ci_publish_docker_image.yml  ci_windows.yml
libplacebo-android/: CMakeLists.txt  build.gradle  generate_crossfile.sh
libplacebo-android/native/: com_grill_libplacebo_FFmpegManager.h  com_grill_libplacebo_PlaceboManager.h  ffmpeg_jni.cpp  placebo_jni.cpp
libplacebo-android/src/main/: AndroidManifest.xml
libplacebo-android/src/main/java/com/grill/libplacebo/: PlaceboManager.java
libplacebo-android/src/main/java/com/grill/placebo/: FFmpegManager.java  PlaceboManager.java
libplacebo-jni-java/: build.gradle  settings.gradle
libplacebo-jni-native/: CMakeLists.txt  build.gradle  meson.build  meson_options.txt  settings.gradle
libplacebo-jni-native/src/: d3d11va_native_jni.cpp  ffmpeg_d3d11va_frames_jni.cpp  gui_font.h  placebo_jni.c  placebo_jni.cpp  ps_button.h  roboto_bold_font.h  roboto_font.h  ui_consts.h  ui_state.h
libs/ffmpeg/linux/x64/: config.asm  config.h  config_components.h
libs/ffmpeg/linux/x64/doc/: config.texi
libs/ffmpeg/linux/x64/ffbuild/: config.fate  config.mak  config.sh
libs/ffmpeg/linux/x64/libavcodec/: allcodecs.d  atsc_a53.d  avcodec.d  avdct.d  bitstream.d  bitstream_filters.d  codec_desc.d  codec_par.d  dirac.d  dynamic_hdr_vivid.d  error_resilience.d  h2645_sei.d  h2645_vui.d  h264_direct.d  h264_refs.d  h264_sei.d  h264chroma.d  h264dec.d  h264idct.d  h264qpel.d  h274.d  hevc_cabac.d  hevc_parse.d  hevc_ps.d  hevc_refs.d  hevc_sei.d  hevcdec.d  hevcdsp.d  imgconvert.d  jfdctint.d  libavcodec.pc  mathtables.d  me_cmp.d  options.d  profiles.d  pthread.d  pthread_frame.d  pthread_slice.d  simple_idct.d  to_upper4.d  (+11 more)
libs/ffmpeg/linux/x64/libavformat/: avio.d  aviobuf.d  format.d  isom_tags.d  libavformat.pc  mux.d  mux_utils.d  network.d  os_support.d  sdp.d  seek.d  utils.d  version.d
libs/ffmpeg/linux/x64/libavutil/: buffer.d  downmix_info.d  file_open.d  film_grain_params.d  hdr_dynamic_vivid_metadata.d  hwcontext_drm.d  hwcontext_vulkan.d  imgutils.d  libavutil.pc  libavutil.version  log.d  rational.d  version.d  vulkan.d
libs/ffmpeg/macos/arm64/: config.h
libs/ffmpeg/macos/arm64/doc/: config.texi
libs/ffmpeg/macos/arm64/ffbuild/: config.fate  config.mak  config.sh
libs/ffmpeg/macos/arm64/libavcodec/: ac3_parser.d  adts_parser.d  allcodecs.d  atsc_a53.d  avdct.d  avpacket.d  bitstream.d  bitstream_filters.d  cabac.d  codec_desc.d  decode.d  dirac.d  dovi_rpu.d  dv_profile.d  dynamic_hdr_vivid.d  encode.d  error_resilience.d  faanidct.d  fdctdsp.d  get_buffer.d  h2645_parse.d  h2645_sei.d  h2645_vui.d  h264_cabac.d  h264_cavlc.d  h264_direct.d  h264_loopfilter.d  h264_mb.d  h264_parse.d  h264_picture.d  h264_ps.d  h264_refs.d  h264_sei.d  h264_slice.d  h264chroma.d  h264data.d  h264dec.d  h264dsp.d  h264idct.d  h264pred.d  (+39 more)
libs/ffmpeg/macos/arm64/libavformat/: allformats.d  avformat.d  avio.d  aviobuf.d  demux.d  demux_utils.d  dump.d  dv.d  format.d  id3v1.d  id3v2.d  isom_tags.d  metadata.d  mux.d  network.d  options.d  os_support.d  riff.d  sdp.d  seek.d  utils.d  version.d
libs/ffmpeg/macos/arm64/libavutil/: aes.d  ambient_viewing_environment.d  buffer.d  channel_layout.d  cpu.d  detection_bbox.d  downmix_info.d  eval.d  fifo.d  file_open.d  film_grain_params.d  fixed_dsp.d  frame.d  hdr_dynamic_metadata.d  hdr_dynamic_vivid_metadata.d  hwcontext.d  hwcontext_videotoolbox.d  hwcontext_vulkan.d  imgutils.d  libavutil.pc  log.d  mastering_display_metadata.d  mathematics.d  opt.d  parseutils.d  pixdesc.d  random_seed.d  rational.d  stereo3d.d  timecode.d  tx.d  tx_double.d  tx_float.d  tx_int32.d  utils.d  version.d  video_enc_params.d  video_hint.d  vulkan.d
libs/ffmpeg/macos/x86_64/: config.asm  config.h  config_components.h
libs/ffmpeg/macos/x86_64/doc/: config.texi
libs/ffmpeg/macos/x86_64/ffbuild/: config.fate  config.mak  config.sh
libs/ffmpeg/macos/x86_64/libavcodec/: ac3_parser.d  adts_parser.d  allcodecs.d  atsc_a53.d  avcodec.d  avdct.d  avpacket.d  bitstream.d  bitstream_filters.d  bsf.d  codec_desc.d  codec_par.d  decode.d  dirac.d  dovi_rpu.d  dv_profile.d  dynamic_hdr_vivid.d  encode.d  error_resilience.d  faanidct.d  fdctdsp.d  get_buffer.d  h2645_parse.d  h2645_sei.d  h2645_vui.d  h264_cabac.d  h264_cavlc.d  h264_direct.d  h264_loopfilter.d  h264_mb.d  h264_parse.d  h264_picture.d  h264_ps.d  h264_refs.d  h264_sei.d  h264_slice.d  h264chroma.d  h264data.d  h264dec.d  h264dsp.d  (+44 more)
libs/ffmpeg/macos/x86_64/libavformat/: allformats.d  avformat.d  avio.d  aviobuf.d  demux.d  demux_utils.d  dump.d  dv.d  format.d  id3v1.d  id3v2.d  isom_tags.d  libavformat.pc  metadata.d  mux.d  mux_utils.d  network.d  options.d  os_support.d  riff.d  sdp.d  seek.d  utils.d  version.d
libs/ffmpeg/macos/x86_64/libavutil/: aes.d  aes_ctr.d  ambient_viewing_environment.d  blowfish.d  buffer.d  camellia.d  cast5.d  channel_layout.d  cpu.d  des.d  detection_bbox.d  downmix_info.d  encryption_info.d  eval.d  file_open.d  film_grain_params.d  fixed_dsp.d  frame.d  hash.d  hdr_dynamic_metadata.d  hdr_dynamic_vivid_metadata.d  hwcontext.d  hwcontext_videotoolbox.d  hwcontext_vulkan.d  imgutils.d  integer.d  intmath.d  libavutil.pc  lls.d  log.d  lzo.d  mastering_display_metadata.d  mathematics.d  md5.d  mem.d  murmur3.d  opt.d  parseutils.d  pixdesc.d  random_seed.d  (+18 more)
libs/ffmpeg/windows/x32/: config.asm  config.h
libs/ffmpeg/windows/x32/doc/: config.texi
libs/ffmpeg/windows/x32/ffbuild/: config.fate  config.mak  config.sh
libs/ffmpeg/windows/x32/libavcodec/: ac3_parser.d  avcodec.d  avpacket.d  bsf.d  codec_list.c  decode.d  dovi_rpu.d  dv_profile.d  dxva2_h264.d  dxva2_hevc.d  encode.d  faanidct.d  fdctdsp.d  h264_cavlc.d  h264_mb.d  h264_picture.d  h264_slice.d  h264data.d  h264dsp.d  hevc_mvs.d  hevcpred.d  parser.d  parsers.d  vulkan.d  (+7 more)
libs/ffmpeg/windows/x64/: config.asm  config.h  config_components.h
(+147 files in other folders)
